# toythereum

./: Cargo.toml  README.md  compiler.rs  example.sol  example.txt  tx_template.json
bytecode/: example
cmd/: calc_selector.sh  deploy.sh  run_evm.sh
contracts/: example.sol
src/: compiler.rs  evm.rs  main.rs  parser.rs  state.rs
src/compiler/: compiler.rs  main.rs  parser.rs
src/evm/: evm.rs  main.rs  state.rs  util.rs
src/function_selector/: main.rs
transactions/: compare.json  deploy.json  increment.json  tx_template.json
