[package]
name = "toythereum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = "0.13.1"
regex = "1.10.3"
nom = "7.1.1"
nom_locate = "4.1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
rlp = "0.6.1"

[[bin]]
name = "compiler"
path = "src/compiler/main.rs"

[[bin]]
name = "evm"
path = "src/evm/main.rs"
